bindings/c/bench/with_zmq/std_compat/zlink.h

typedef int zlink_send_flags_t;
typedef zlink_monitor_event_t zlink_socket_monitor_event_t;
typedef void (*zlink_socket_monitor_handler_fn) (const zlink_monitor_event_t *event_,
                                                 void *userdata_);
typedef struct zlink_socket_monitor_open_options_t
{
    zlink_socket_monitor_event_mask_t events;
} zlink_socket_monitor_open_options_t;
typedef struct zlink_monitor_status_t
{
    uint32_t source_kind;
    uint32_t state_flags;
    uint32_t detail_flags;
    uint32_t ready_count;
    uint64_t snd_pending_msgs;
    uint64_t rcv_pending_msgs;
} zlink_monitor_status_t;
struct zlink_monitor_handle_t
{
    zlink_monitor_handle_t () :
        owner (NULL),
        monitor (NULL),
        callback (NULL),
        userdata (NULL),
        stop (false),
        ready_count (0),
        socket_type (0)
    {
    }

    void *owner;
    void *monitor;
    zlink_socket_monitor_handler_fn callback;
    void *userdata;
    std::thread worker;
    std::atomic<bool> stop;
    std::atomic<uint32_t> ready_count;
    int socket_type;
};
inline void *zlink_socket_monitor_open (void *s_,
                                        const zlink_socket_monitor_open_options_t *options_)
{
    (void) options_;
    void *ctx = g_zlink_last_ctx.load (std::memory_order_acquire);
    if (!ctx) {
        errno = EINVAL;
        return NULL;
    }

    int socket_type = 0;
    size_t socket_type_size = sizeof (socket_type);
    (void) zmq_getsockopt (s_, ZMQ_TYPE, &socket_type, &socket_type_size);

    char endpoint[128];
    const unsigned long seq = g_zlink_monitor_seq.fetch_add (1, std::memory_order_relaxed);
    std::snprintf (endpoint, sizeof (endpoint), "inproc://zlink-compat-mon-%lu", seq);

    int raw_events = ZMQ_EVENT_CONNECTED | ZMQ_EVENT_BIND_FAILED;
#ifdef ZMQ_EVENT_ACCEPTED
    raw_events |= ZMQ_EVENT_ACCEPTED;
#endif
#ifdef ZMQ_EVENT_ACCEPT_FAILED
    raw_events |= ZMQ_EVENT_ACCEPT_FAILED;
#endif
#ifdef ZMQ_EVENT_CLOSE_FAILED
    raw_events |= ZMQ_EVENT_CLOSE_FAILED;
#endif
#ifdef ZMQ_EVENT_HANDSHAKE_SUCCEEDED
    raw_events |= ZMQ_EVENT_HANDSHAKE_SUCCEEDED;
#endif
#ifdef ZMQ_EVENT_HANDSHAKE_FAILED_NO_DETAIL
    raw_events |= ZMQ_EVENT_HANDSHAKE_FAILED_NO_DETAIL;
#endif
#ifdef ZMQ_EVENT_HANDSHAKE_FAILED_PROTOCOL
    raw_events |= ZMQ_EVENT_HANDSHAKE_FAILED_PROTOCOL;
#endif
#ifdef ZMQ_EVENT_HANDSHAKE_FAILED_AUTH
    raw_events |= ZMQ_EVENT_HANDSHAKE_FAILED_AUTH;
#endif

    if (zmq_socket_monitor (s_, endpoint, raw_events) != 0)
        return NULL;

    void *monitor = zmq_socket (ctx, ZMQ_PAIR);
    if (!monitor) {
        zmq_socket_monitor (s_, NULL, 0);
        return NULL;
    }
    if (zmq_connect (monitor, endpoint) != 0) {
        zmq_close (monitor);
        zmq_socket_monitor (s_, NULL, 0);
        return NULL;
    }

    zlink_monitor_handle_t *handle = new zlink_monitor_handle_t ();
    handle->owner = s_;
    handle->monitor = monitor;
    handle->socket_type = socket_type;
    {
        std::lock_guard<std::mutex> lock (g_zlink_monitor_registry_sync);
        g_zlink_monitor_registry.insert (handle);
    }
    return handle;
}
inline int zlink_socket_monitor_handler (void *monitor_,
                                         zlink_socket_monitor_handler_fn handler_,
                                         void *userdata_)
{
    zlink_monitor_handle_t *handle = static_cast<zlink_monitor_handle_t *> (monitor_);
    if (!handle) {
        errno = EINVAL;
        return -1;
    }
    handle->callback = handler_;
    handle->userdata = userdata_;
    if (handler_)
        handle->worker = std::thread (&zlink_monitor_thread_main, handle);
    return 0;
}
inline int zlink_socket_monitor_recv (void *monitor_,
                                      zlink_socket_monitor_event_t *out_,
                                      zlink_send_flags_t flags_)
{
    (void) flags_;
    return zlink_recv_monitor_event_raw (static_cast<zlink_monitor_handle_t *> (monitor_), out_);
}
inline int zlink_monitor_status (void *monitor_, zlink_monitor_status_t *out_)
{
    zlink_monitor_handle_t *handle = static_cast<zlink_monitor_handle_t *> (monitor_);
    if (!handle || !out_) {
        errno = EINVAL;
        return -1;
    }
    std::memset (out_, 0, sizeof (*out_));
    out_->ready_count = handle->ready_count.load (std::memory_order_acquire);
    return 0;
}
inline int zlink_monitor_close (void **monitor_p_)
{
    if (!monitor_p_ || !*monitor_p_)
        return 0;
    zlink_monitor_handle_t *handle = static_cast<zlink_monitor_handle_t *> (*monitor_p_);
    *monitor_p_ = NULL;
    {
        std::lock_guard<std::mutex> lock (g_zlink_monitor_registry_sync);
        g_zlink_monitor_registry.erase (handle);
    }
    handle->stop.store (true, std::memory_order_release);
    if (handle->worker.joinable ())
        handle->worker.join ();
    if (handle->owner)
        zmq_socket_monitor (handle->owner, NULL, 0);
    if (handle->monitor)
        zmq_close (handle->monitor);
    delete handle;
    return 0;
}